# nan-python-engineering-labs

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  GETTING_STARTED.md  README.md  STATUS.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/: pull_request_template.md
.github/workflows/: validate-all-modules.yml
01_python_fundamentals/: README.md
01_python_fundamentals/advanced_strings/: README.md
01_python_fundamentals/basic_debugging_optional/: README.md
01_python_fundamentals/basic_error_handling/: README.md
01_python_fundamentals/basic_functions/: README.md
01_python_fundamentals/comprehensions/: README.md
01_python_fundamentals/control_structures/: README.md
01_python_fundamentals/dictionaries_sets/: README.md
01_python_fundamentals/input_output_optional/: README.md
01_python_fundamentals/lists_tuples/: README.md
01_python_fundamentals/module_imports/: README.md
01_python_fundamentals/operators_expressions_optional/: README.md
01_python_fundamentals/variables_data_types_optional/: README.md
02_intermediate_python/: README.md
02_intermediate_python/advanced_functions/: README.md
02_intermediate_python/basic_context_managers/: README.md
02_intermediate_python/basic_decorators/: README.md
02_intermediate_python/basic_iterators/: README.md
02_intermediate_python/closures/: README.md
02_intermediate_python/collections_module/: README.md
02_intermediate_python/csv_json/: README.md
02_intermediate_python/datetime_time/: README.md
02_intermediate_python/exception_handling/: README.md
02_intermediate_python/generators/: README.md
02_intermediate_python/itertools/: README.md
02_intermediate_python/modules_packages/: README.md
02_intermediate_python/pathlib/: README.md
02_intermediate_python/regex_optional/: README.md
03_basic_intermediate_oop/: README.md
03_basic_intermediate_oop/init_self/: README.md
04_cpython_internals_advanced/: README.md  create_templates.py
05_modern_concurrency/: README.md
06_typing_metaprogramming/: README.md
07_design_patterns/: README.md
08_application_architecture/: README.md
09_testing_qa/: README.md
10_performance_optimization/: README.md
11_modern_tooling_2026/: README.md
12_fastapi_complete/: README.md
13_backend_ecosystem/: README.md
14_advanced_python_2026/: README.md
15_basic_data_science/: README.md
scripts/: audit_nan_modules.py  complete_module_content.py  complete_module_readmes.py  fix_remaining_placeholders.py  generate_modulo_14.py  generate_modulo_16.py  generate_patrones.py  generate_structure.py  populate_content.py  progress.py  run_topic_tests.py  update_readmes.py  update_references.py  validate_all_modules.py  validate_ci_gate.py  validate_nan_language.py
(+2419 files in other folders)
